# motiflash

./: Procfile  README.md  gunicorn.conf  manage.py  manage.sh  pyproject.toml  pytest.ini  setup.cfg
cards/: admin.py  forms.py  models.py  test_utils.py  urls.py  utils.py  views.py
cards/migrations/: 0001_initial.py  0002_achievement_notifications.py  0002_course_name.py  0003_levelachievement_siteachievement.py  0004_auto_20210429_1402.py  0005_profile.py  0006_profile_level.py  0007_auto_20210501_1231.py
cards/static/cards/css/: base.css  cards.css
cards/static/cards/js/: base.js  cards-vue.js  cards.js  courses.js
cards/templates/: achievements.html  base.html  card_add.html  cards.html  cards_edit.html  courses.html  form.html  index.html  profile.html  share.html
cards/templates/registration/: logged_out.html  login.html  signup.html
cards/templatetags/: achievements_helper.py  dict_helper.py  form_helper.py
cards/views/: cards.py  courses.py  notifications.py  profile.py  test_profile.py
motiflash/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
