[tool.poetry]
name = "motiflash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.1.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"
sentry-sdk = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-django = "^4.1.0"
mypy = "^0.812"
django-stubs = "^1.7.0"
autopep8 = "^1.5.6"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
